--- a/src/presentation/pages/login/styles.scss
+++ b/src/presentation/pages/login/styles.scss
@@ -1,7 +1,4 @@
-$white: #FFF;
-$black: #000;
-$background: #F2F2F2;
-$primary: #000333;
+@import "../../styles/colors.scss";
 
 * {
     font-family: 'Roboto', sans-serif;
