--- a/src/presentation/components/input/styles.scss
+++ b/src/presentation/components/input/styles.scss
@@ -8,6 +8,7 @@
 
   input {
     flex: 1;
+    font-size: 1rem;
 
     &:focus {
       outline-color: $primary;
@@ -17,7 +18,7 @@
   input[type='password'],
   input[type='email'] {
     border: 1px solid $primary;
-    line-height: 4rem;
+    line-height: 3rem;
     border-radius: .4rem;
     padding: 0 .8rem;
   }
