--- a/src/presentation/styles/globals.scss
+++ b/src/presentation/styles/globals.scss
@@ -2,10 +2,13 @@
 
 * {
   font-family: 'Roboto', sans-serif;
-  font-size: 14px;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5% !important;
 }
 
 body {
