--- a/src/presentation/components/login-form/styles.scss
+++ b/src/presentation/components/login-form/styles.scss
@@ -9,4 +9,27 @@
 
     padding: 5rem;
     border-radius: 5px;
+
+    form {
+      display: flex;
+      flex-direction: column;
+      // align-items: center;
+
+      .buttonWrapper {
+        align-self: center;
+
+        display: flex;
+        flex-direction: column;
+      }
+
+      .title {
+        font-size: 2rem;
+        align-self: center;
+
+      }
+    }
+
+    .spinnerWrapper {
+      margin: 1rem auto;
+    }
 }
