--- a/src/presentation/components/spinner/styles.scss
+++ b/src/presentation/components/spinner/styles.scss
@@ -5,7 +5,9 @@
 */
 
 .spinner {
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
   width: 80px;
   height: 80px;
@@ -14,8 +16,8 @@
     box-sizing: border-box;
     display: block;
     position: absolute;
-    width: 64px;
-    height: 64px;
+    width: 40px;
+    height: 40px;
     margin: 8px;
     border: 8px solid $primary;
     border-radius: 50%;
